<resources>
    <string name="app_name">VeggieMetrics</string>
    <string name="main_activity">Main Activity</string>
    <string name="home">Home</string>
    <string name="receptes">Receptes</string>
    <string name="perfil">Perfil</string>
    <string name="option_1">option_1</string>
    <string name="option_2">option_2</string>
    <string name="option_3">option_3</string>
    <string name="nova_recepta">Registra una nova recepta</string>
    <string name="recupera_contrasenya">Recupera la contrasenya</string>
    <string name="Registre">Registre</string>
    <string name="test_setmanal">Test setmanal</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="usuari">Usuari</string>
    <string name="inicia_sessio">Inicia sessió</string>
    <string name="new_user">Crea un nou usuari</string>
    <string name="miss_pass">Has oblidat la contrasenya?</string>
    <string name="contrasenya_minima">Contrasenya (mín. 6 caràcters)</string>
    <string name="repetir_contrasenya">Repeteix la contrasenya </string>
    <string name="registre">Registra\'m</string>
    <string name="camp_buit">Un dels camps està buit</string>
    <string name="sessio_iniciada">Sessió iniciada</string>
    <string name="error_inici">No s\'ha pogut iniciar sessió</string>
    <string name="link_ok">Link de recuperació enviat al correu</string>
    <string name="link_fail">No s\'ha pogut recuperar la contrasenya</string>
    <string name="coincidir_contrasenyes">Les contrasenyes han de coincidir</string>
    <string name="registrat">Registrat correctament</string>
    <string name="no_registrat">No s\'ha pogut fer el registre</string>
    <string name="email">Has de posar el teu email</string>
    <string name="add">add</string>
    <string name="Nova_recepta">Nova recepta</string>
    <string name="nom_recepta">Nom de la recepta</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparacio">Preparació</string>
    <string name="cerca">Cerca</string>
    <string name="publica">Publica</string>
    <string name="correu">Correu electrònic</string>
    <string name="recupera">Recupera</string>
    <string name="titol_recepta">Títol de recepta</string>
    <string name="autor_recepta">Autor: </string>
    <string name="data_recepta">Data: 01/01/2020</string>
    <string name="dieta_recepta">Dieta: </string>
    <string name="valoracio_recepta">Valoració:</string>
    <string name="llista_ingredients">- Ingredient 1\n- Ingredient 2\n- Ingredient 3\n</string>
    <string name="valora">Valora</string>
    <string name="top">Top receptes de la setmana</string>
    <string name="recomanades">Recomanades per a tu</string>
    <string name="preferits">Preferits</string>
    <string name="grams">grams</string>
    <string name="autor_title">Autor: </string>
    <string name="sense_ingredients">Encara no hi ha cap ingredient</string>
    <string name="aliment_seleccionat">Aliment seleccionat: </string>
    <string name="peces">unitats</string>
    <string name="omplir_dades">Cal omplir totes les dades</string>
    <string name="error_imatge">Error al penjar la imatge</string>
    <string name="actualitzacio">Actualització de dades correcta</string>
    <string name="falta_foto">Falta una foto de recepta!</string>
    <string name="foto_ok">Foto penjada correctament</string>
    <string name="rating_actualitzat">Actualitzat el rating</string>
    <string name="rating_guardat">Rating guardat correctament</string>
    <string name="nom_necessari">Es necessita un nom d\'usuari per desar canvis</string>
    <string name="sense_nom">Sense Nom</string>
    <string name="correu_exemple">sampleuser@gmail.com</string>
    <string name="dades_personals">Dades personals</string>
    <string name="edat">Edat (anys)</string>
    <string name="alçada">Alçada (m)</string>
    <string name="pes">Pes (Kg)</string>
    <string name="sexe">Sexe</string>
    <string name="embaras">Estàs embarassada?</string>
    <string name="dieta">Dieta</string>
    <string name="alergia">Al·lèrgies</string>
    <string name="desa">Desa canvis</string>
    <string name="analisi">Anàlisi nutricional</string>
    <string name="imc">IMC:</string>
    <string name="sense_dades">Sense dades</string>
    <string name="proteines">Proteïnes:</string>
    <string name="ferro">Ferro:</string>
    <string name="omega">Omega-3:</string>
    <string name="calci">Calci:</string>
    <string name="test">Test Setmanal</string>
    <string name="dades_incorrectes">Dades incorrectes al perfil</string>
    <string name="imc1">Pes insuficient</string>
    <string name="imc2">Pes normal</string>
    <string name="imc3">Sobrepès grau I</string>
    <string name="imc4">Sobrepès grau II</string>
    <string name="imc5">Obesitat grau I</string>
    <string name="imc6">Obesitat grau II</string>
    <string name="imc7">Obesitat grau III</string>
    <string name="imc8">Obesitat grau IV</string>
    <string name="galeria">Galeria</string>
    <string name="camera">Càmera</string>
    <string name="camera_necessaria">Són necessaris permissos de càmera</string>
    <string name="send_test">Resultats</string>
    <string name="pregunta1">1. Quantes racions de carn has consumit?</string>
    <string name="pregunta2">2. Quantes racions de peix blau (seitó, sardina, salmó, tonyina…) has consumit?</string>
    <string name="pregunta3">3. Quantes racions de marisc has consumit?</string>
    <string name="pregunta4">4. Quantes racions de cereals (arròs, quinoa, cuscús…) i derivats (pasta, pa…) has pres, excloent rebosteria i dolços?</string>
    <string name="pregunta5">5. Quantes racions de llegums has pres?</string>
    <string name="pregunta6">6. Quantes racions de lactis (un got de llet, dos iogurts, un tros de formatge…) has pres?</string>
    <string name="pregunta7">7. Amb quina freqüència has consumit fruits secs?</string>
    <string name="pregunta8">8. En particular, amb quina freqüència has menjat nous i/o llavors de lli?</string>
    <string name="pregunta9">9. Quantes racions de verdures i hortalisses has pres?</string>
    <string name="pregunta10">10. Amb quina freqüència has inclòs verdures de fulla verda (enciam, espinacs, col…) en els teus àpats?</string>
    <string name="pregunta11">11. Quantes peces de fruita has menjat?</string>
    <string name="pregunta12">12. Acostumes a prendre cafè o te després dels àpats principals?</string>
    <string name="pregunta13">13. Quina de les següents opcions descriu millor els teus hàbits respecte el consum de dolços, rebosteria i xocolata?</string>
    <string name="pregunta14">14. Quantes racions d’aliments processats (snacks, plats precuinats…) has pres?</string>
    <string name="pregunta15">15. Amb quina freqüència has pres begudes carbonatades? </string>
    <string name="no_one">cap</string>
    <string name="between_1_3">entre 1 i 3</string>
    <string name="between_4_6">entre 4 i 6</string>
    <string name="more_than_7">7 o més</string>
    <string name="less_than_1">menys d\'una al dia</string>
    <string name="between_1_2">entre 1 i 2</string>
    <string name="more_than_3">3 o més</string>
    <string name="never">no, en cap moment</string>
    <string name="sometimes">sí, en algun cas puntual</string>
    <string name="usually">sí, en bastants àpats</string>
    <string name="always">sí, gairebé sempre</string>
    <string name="between_3_5">entre 3 i 5</string>
    <string name="more_than_6">6 o més</string>
    <string name="never2">mai</string>
    <string name="sometimes2">en algun cas puntual</string>
    <string name="usually2">bastants dies</string>
    <string name="always2">cada dia</string>
    <string name="between_1_4">entre 1 i 4</string>
    <string name="between_4_8">entre 4 i 8</string>
    <string name="more_than_9">9 o més</string>
    <string name="one_or_less_daily">1 o menys al dia</string>
    <string name="between_1_2_daily">entre 1 i 2 al dia</string>
    <string name="between_2_3_daily">entre 2 i 3 al dia</string>
    <string name="between_3_5_daily">entre 3 i 5 al dia</string>
    <string name="between_4_5_daily">entre 4 i 5 al dia</string>
    <string name="more_than_3_daily">3 o més al dia</string>
    <string name="more_than_6_daily">6 o més al dia</string>
    <string name="hardly_ever">gens o molt puntualment</string>
    <string name="almost_daily">la majoria de dies de la setmana</string>
    <string name="daily">una ració diària aproximadament</string>
    <string name="more_than_daily">diverses racions diàriament</string>
    <string name="no_eat">no n’he menjat res</string>
    <string name="eat_abit">n’he menjat 1 o 2 vegades alguna ració</string>
    <string name="eat_daily">n’he menjat alguna ració més o menys cada dia</string>
    <string name="eat_more_daily">cada dia n’he pres més d’una ració</string>
    <string name="recepta_fav1">Recepta fav1</string>
    <string name="autor">autor</string>
    <string name="introduccio_test">Respon les següents preguntes amb l\'opció que més s\'assembli a la teva alimentació durant els últims 7 dies. Al acabar, es mostraran els resultats en el perfil.</string>
    <string name="falten_preguntes">Falten preguntes per contestar</string>
    <string name="avis1">- Ingesta de fruita i verdura insuficient. Es recomana prendre 5 peces diàriament.</string>
    <string name="avis2">- Ingesta de fruita i verdura massa elevada. Perjudica l\'absorció de calci i ferro.</string>
    <string name="avis3">- Recomanable consumir més verdura de fulla verda per a una absorció de ferro òptima.</string>
    <string name="avis4">- Recomanable reduir el consum de cafè després dels àpats principals. Dificulta l\'absorció de ferro.</string>
    <string name="avis5">- La ingesta de dolços i rebosteria actual podria dificultar l\'absorció de ferro.</string>
    <string name="avis6">- La ingesta d\'aliments processats actual podria dificultar l\'absorció de calci.</string>
    <string name="avis7">- la ingesta de begudes carbonatades actual podria dificultar l\'absorció de calci.</string>
    <string name="avis8">- Recomanable acudir a un nutricionista per tal de satisfer la necessitat de vitamina B12, no present en la dieta vegetariana.</string>
    <string name="avis9">- Recomanable acudir a un nutricionista per tal de satisfer la necessitat de vitamina B12, no present en la dieta vegana.</string>
    <string name="vegana">Vegana</string>
    <string name="vegetariana">Vegetariana</string>
    <string name="flexitariana">Flexitariana</string>
    <string name="piscivegetariana">Piscivegetariana</string>
    <string-array name="Dietes">
        <item>@string/vegana</item>
        <item>@string/vegetariana</item>
        <item>@string/flexitariana</item>
        <item>@string/piscivegetariana</item>
    </string-array>
    <string name="man">Home</string>
    <string name="woman">Dona</string>
    <string-array name="Sex">
        <item>@string/man</item>
        <item>@string/woman</item>
    </string-array>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string-array name="Pregnant">
        <item>@string/si</item>
        <item>@string/no</item>
    </string-array>
    <string name="gluten">Gluten</string>
    <string name="crustacis">Crustacis</string>
    <string name="ous">Ous</string>
    <string name="cacahuets">Cacahuets</string>
    <string name="soja">Soja</string>
    <string name="lactis">Lactis</string>
    <string name="fruits_closca">Fruits amb closca</string>
    <string name="api">Api</string>
    <string name="sesam">Grans de sèsam</string>
    <string name="filtra">Filtra per: </string>
    <string name="nom">Nom</string>
    <string name="micronutrient">Micronutrient</string>
    <string name="mostra_receptes">Mostra receptes: </string>
    <string name="totes">Totes</string>
    <string name="filtra_cerca">Filtra</string>
    <string name="valoracioMitjana">Valoració: </string>
    <string name="numVots">Vots: </string>
</resources>