<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:context=".recipesFragment"
        android:animateLayoutChanges="true"
        android:background="@drawable/background">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <androidx.appcompat.widget.SearchView
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/MarroPrincipal"
                android:textCursorDrawable="@null"
                app:iconifiedByDefault="false"
                app:queryBackground="@null" />

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/filtra"
                android:src="@drawable/ic_iso_black_24dp"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            android:id="@+id/hidden"
            android:translationZ="40dp"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:layout_height="wrap_content">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:elevation="30dp"
                android:text="@string/filtra"/>

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroup"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd1"
                    android:checked="true"
                    android:text="@string/nom"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd2"
                    android:text="@string/micronutrient"/>

        </RadioGroup>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:elevation="30dp"
                android:text="@string/mostra_receptes"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radiogroup2"
                android:layout_marginLeft="30dp"
                android:gravity="left"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd02"
                    android:checked="true"
                    android:text="@string/totes"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd12"
                    android:text="@string/vegana"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd22"
                    android:text="@string/vegetariana"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd32"
                    android:text="@string/piscivegetariana"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rd42"
                    android:text="@string/flexitariana"/>

        </RadioGroup>


        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/filtra_cerca"
                android:id="@+id/conf_filtr"
                android:layout_margin="20dp"
                style="@style/button_style"/>

    </LinearLayout>

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/llista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"/>


        <View
                android:id="@+id/overlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"

                android:visibility="gone" />

        <ProgressBar
                android:id="@+id/progress_barRV"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:visibility="invisible" />

    </FrameLayout>
</LinearLayout>