<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profileFragment"
        android:background="@drawable/background">

    <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/WeeklyTopTitle"
            android:background="@drawable/spinner_background">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".perfil_activity"
                android:layout_margin="30dp">

            <TextView
                    android:id="@+id/recipe_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titol_recepta"
                    android:textSize="30dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"/>

            <ImageView
                    android:id="@+id/recipePic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    tools:srcCompat="@drawable/recipe_pic"
                    android:layout_below="@+id/recipe_title"/>

            <TextView
                    android:id="@+id/autor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/autor_recepta"
                    android:layout_toRightOf="@id/recipePic"
                    android:layout_below="@+id/recipe_title"
                    android:textSize="15dp"
                    android:gravity="center"
                    style="@style/TextViewStyle" />

            <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/data_recepta"
                    android:layout_toRightOf="@id/recipePic"
                    android:layout_below="@+id/autor"
                    android:textSize="15dp"
                    android:gravity="center"
                    style="@style/TextViewStyle"/>

            <TextView
                    android:id="@+id/diet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/dieta_recepta"
                    android:layout_toRightOf="@id/recipePic"
                    android:layout_below="@+id/date"
                    android:textSize="15dp"
                    android:gravity="center"
                    style="@style/TextViewStyle"/>

            <TextView
                    android:id="@+id/ValMitjana"
                    android:layout_width="169dp"
                    android:layout_height="23dp"
                    android:layout_below="@+id/diet"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/recipePic"
                    android:text="@string/valoracioMitjana"
                    android:textSize="15dp"
                    android:gravity="center"
                    style="@style/TextViewStyle"/>
            <TextView
                    android:id="@+id/vots"
                    android:text="@string/numVots"
                    android:layout_width="169dp"
                    android:layout_height="23dp"
                    android:layout_below="@+id/ValMitjana"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/recipePic"
                    android:textSize="15dp"
                    android:gravity="center"
                    style="@style/TextViewStyle"/>
            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <RatingBar
                    android:id="@+id/ratingReceptes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recipePic"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:numStars="5"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:stepSize="0.5" />

            <Button
                    android:id="@+id/rate"
                    style="@style/button_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ratingReceptes"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:text="@string/valora" />

            <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/ingredients"
                    android:layout_below="@+id/rate"

                    android:textSize="20dp"
                    android:gravity="center"
                    style="@style/TextViewStyle"/>

            <TextView
                    android:id="@+id/ingredientsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/llista_ingredients"
                    android:layout_below="@+id/ingredients"
                    android:textSize="15dp"
                    android:gravity="top"
                    style="@style/TextViewStyle" />

            <TextView
                    android:id="@+id/steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/preparacio"
                    android:layout_below="@+id/ingredientsList"
                    android:textSize="20dp"
                    android:gravity="center"
                    style="@style/TextViewStyle"/>

            <TextView
                    android:id="@+id/stepsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/preparacio"
                    android:layout_below="@+id/steps"
                    android:textSize="15dp"
                    android:gravity="top"
                    style="@style/TextViewStyle" />

        </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>