<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".Register"
        android:background="@drawable/background">

    <ImageView
            android:id="@+id/logoVM"
            android:layout_width="wrap_content"
            android:layout_height="164dp"
            android:src="@drawable/veggie" />

    <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correu"
            android:layout_margin="30dp"
            style="@style/edit_text_style"/>

    <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/contrasenya_minima"
            android:inputType="textPassword"
            style="@style/edit_text_style"/>

    <EditText
            android:id="@+id/passrepetida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repetir_contrasenya"
            android:inputType="textPassword"
            style="@style/edit_text_style"/>

    <Button
            android:id="@+id/boton_conf"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Registra'm"
            style="@style/button_style"/>


</LinearLayout>